# diplom_project

./: .gitignore  CMakeLists.txt  ICO.py  ICO_copy.py  Visualizer.cpp  Visualizer.h  main.cpp  physics.cpp  physics.h  types.h
